# 3-python-package-goodgood

./: README.md  build.yaml  example.py  pyproject.toml
.github/workflows/: build.yml
src/: angry.py  echo.py  emoji.py  emotive.py  mocking.py  palindrome.py  randomize.py  reverse.py
tests/: test_angry.py  test_echo.py  test_emoji.py  test_emotive.py  test_mocking.py  test_palindrome.py  test_randomize.py  test_reverse.py
